testsuite/poke.pkl/mul-diag-4.pk
/* { dg-do compile } */

var s = 3UL
        * [1,2,3]; /* { dg-error "invalid operand.*\n.*expected integral, offset or string" } */
